--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 .card {
     background: #000000d0;
     /* border: 1px solid black; */
-    padding: 1.5rem 2rem;
+    padding: 2.4rem 3.2rem;
     border-radius: 10%;
     width: 100%;
     height: 350px;
@@ -38,18 +38,18 @@
     /* background: red; */
     position: relative;
     /* top: -50px; */
-    height: 2.5rem;
+    height: 4rem;
 
 }
 
 .search .searchBar {
     width: 85%;
     height: 100%;
-    border-radius: 2rem;
+    border-radius: 3.2rem;
     font-family: 'B612 Mono';
-    font-size: 1rem;
+    font-size: 1.6rem;
     font-weight: 500;
-    padding-left: .7rem;
+    padding-left: 1.5rem;
     position: absolute;
     color: rgb(231, 231, 231);
     background: #7c7c7c2b;
@@ -77,8 +77,8 @@
     height: 250px;
     /* background: red; */
     position: absolute;
-    padding: 2rem 2rem;
-    bottom: 1rem;
+    padding: 3.2rem 3.2rem;
+    bottom: 1.6rem;
 }
 
 .current-city {
@@ -87,7 +87,7 @@
     position: relative;
     bottom: 30px;
     color: rgb(231, 231, 231);
-    font-size: 1.7rem;
+    font-size: 2.5rem;
     margin-bottom: .7rem;
     text-transform: uppercase;
 }
@@ -96,7 +96,7 @@
     color: #fff;
     font-family: 'Montserrat Alternates';
     font-weight: 600;
-    font-size: 2rem;
+    font-size: 3.2rem;
     position: relative;
     top: -15px;
 }
@@ -104,15 +104,15 @@
 .desc, .humidity, .wind-speed {
     color: #fff;
     font-family: 'Ubuntu';
-    font-weight: 300;
+    font-weight: 400;
     position: relative;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     text-transform: capitalize;
 
 }
 
 .humidity, .wind-speed {
-    margin-bottom: 1rem;
+    margin-bottom: 1.6rem;
 }
 
 .weather-info.load {
